--- a/Properties/environmentProperties.properties
+++ b/Properties/environmentProperties.properties
@@ -1,5 +1,5 @@
 #Enviroment-Properties
-#Mon Dec 07 09:20:17 IST 2020
+#Mon Dec 07 17:25:45 IST 2020
 platformName=windows
-broswerVersion=68.6.0
-browserName=firefox
+broswerVersion=87.0.4280.66
+browserName=chrome
